--- a/src/widgets/Home/AboutUs/components/problemCard/ProblemCard.module.scss
+++ b/src/widgets/Home/AboutUs/components/problemCard/ProblemCard.module.scss
@@ -34,13 +34,57 @@
   }
 }
 
-.mobilePointer {
+.mobilePointer,.bluePointer954 {
   display: none;
 }
 
-@media screen and (max-width: 1440px) {
+@media screen and (min-width: 1440px) and (max-width: 1920px) {
   .problemCardWrapper {
     width: 436px;
+  }
+}
+
+@media screen and (max-width: 1440px) {
+  .problemCardWrapper__pointer {
+    display: none;
+  }
+}
+
+@media screen and (min-width: 1024px) and (max-width: 1440px) {
+  .problemCardWrapper {
+    width: 100%;
+    height: 455px;
+    padding: 25px 27px 0 28px;
+    margin-top: 0px;
+    border-radius: 35.3409px;
+
+    .bluePointer954 {
+      display: inline-block;
+      position: absolute;
+      top: -35px;
+      right: -70px;
+      z-index: 2;
+    }
+    
+    &__text {
+      font-size: 18px;
+      width: 351px;
+      line-height: 105%;
+/* or 19px */
+    }
+
+    .problemCardTitle {
+      margin-bottom: 16px;
+      &__label {
+        font-size: 22px;
+        line-height: 90%;
+      }
+
+      img {
+        width: 41px;
+        height: 41px;
+      }
+    }
   }
 }
 
