--- a/src/widgets/Home/Primary/PrimaryView.module.scss
+++ b/src/widgets/Home/Primary/PrimaryView.module.scss
@@ -38,7 +38,7 @@
 
 .primaryViewWrapper {
   margin-top: 40px;
-  height: 855.25px;
+  margin-bottom: 139px;
 }
 
 .container {
@@ -141,6 +141,10 @@
 
 // === MEDIA ===
 @media screen and (min-width: 1440px) and (max-width: 1920px) {
+  .primaryViewWrapper {
+    margin-bottom: 200px;
+  }
+  
   .container {
     @include container-1440;
   }
@@ -158,6 +162,10 @@
 }
 
 @media screen and (min-width: 1024px) and (max-width: 1440px) {
+  .primaryViewWrapper {
+  margin-bottom: 184px;
+
+  }
   .container {
     @include container-934px;
   }
