--- a/src/widgets/Home/AboutUs/AboutUs.module.scss
+++ b/src/widgets/Home/AboutUs/AboutUs.module.scss
@@ -8,10 +8,10 @@
   @include container;
 }
 
-.titleText {
-  width: 1081px;
-  margin: 0 auto;
-}
+// .titleText {
+//   width: 1081px;
+//   margin: 0 auto;
+// }
 
 .aboutUsInner {
   &__title {
@@ -46,10 +46,6 @@
 }
 
 @media screen and (min-width: 1024px) and (max-width: 1440px) {
-  .container {
-    @include container-934px;
-  }
-
   .aboutUsInner {
     .aboutUsCards {
       margin-top: 80px;
@@ -62,6 +58,37 @@
   }
 }
 
+@media screen and (max-width: 1024px) {
+  .aboutUsInner {
+    .aboutUsCards {
+      flex-direction: column;
+      margin-bottom: 70px;
+    }
+  }
+
+  .leftCards {
+    flex-direction: column;
+  }
+}
+
+@media screen and (min-width: 640px) and (max-width: 1024px) {
+  .aboutUsWrapper {
+    padding-left: 30px;
+    padding-right: 30px;
+    padding-bottom: 60px;
+  }
+
+  .titleText {
+    // width: 579.57px;
+  }
+
+  .aboutUsInner {
+    .aboutUsCards {
+      margin-bottom: 90px;
+    }
+  }
+}
+
 @media screen and (max-width: 480px) {
   .aboutUsWrapper {
     padding-left: 15px;
@@ -69,13 +96,8 @@
     padding-bottom: 60px;
   }
   
-  .container {
-    @include container-mobile;
-  }
-
   .aboutUsInner {
     .aboutUsCards {
-      flex-direction: column;
       margin-bottom: 70px;
     }
   }
