--- a/src/widgets/Home/Primary/PrimaryView.module.scss
+++ b/src/widgets/Home/Primary/PrimaryView.module.scss
@@ -39,6 +39,8 @@
 .primaryViewWrapper {
   margin-top: 40px;
   margin-bottom: 139px;
+  padding-left: 30px;
+  padding-right: 30px;
 }
 
 .container {
