--- a/src/widgets/Home/Advantages/components/WhiteCard/WhiteCard.module.scss
+++ b/src/widgets/Home/Advantages/components/WhiteCard/WhiteCard.module.scss
@@ -15,13 +15,6 @@
 }
 
 // === media ===
-@media screen and (max-width: 1440px) {
-  // .whiteCardWrapper {
-  //   padding-left: 27px;
-  //   padding-right: 20px;
-  // }
-}
-
 @media screen and (max-width: 1440px) and (min-width: 1024px) {
   .whiteCardWrapper {
     font-size: 22px;
@@ -32,13 +25,26 @@
   }
 }
 
+@media screen and (max-width: 1024px) {
+  .whiteCardWrapper {
+    height: auto;
+    min-height: auto;
+  }
+}
+
+@media screen and (min-width: 640px) and (max-width: 1024px) {
+  .whiteCardWrapper {
+    font-size: 22px;
+    line-height: 90%;
+    padding-bottom: 30px;
+  }
+
+}
+
 @media screen and (max-width: 480px) {
   .whiteCardWrapper {
     border-radius: 30px;
     padding: 19px 21px 21px 22px;
-    width: auto;
-    height: auto;
-    min-height: auto;
     font-size: 18px;
     line-height: 90%;
   }
