--- a/src/widgets/Home/Primary/PrimaryView.module.scss
+++ b/src/widgets/Home/Primary/PrimaryView.module.scss
@@ -256,10 +256,6 @@
     margin-bottom: 80px;
   }
 
-  // .container {
-  //   @include container-580px;
-  // }
-
   .primaryViewInner {
     row-gap: 17px;
 
@@ -328,70 +324,32 @@
       z-index: 3;
     }
   }
-
-
-
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 639px) {
   .primaryViewWrapper {
     padding: 0 15px;
   }
-  .container {
-    @include container-mobile;
-  }
 
-  .humanMobile {
-    display: inline-block;
-    position: absolute;
-    top: 33px;
-    right: 10px;
-    z-index: 1;
+  .viewLeftColumn,.viewRightColumn {
+    width: 100%;
+    padding: 0;
+
+    &__title {
+      @include title-mobile;
+    }
   }
 
   .viewLeftColumn {
-    @include columnView-mobile;
-
     .leftColumnIllustration {
       &__text {
-        width: 213px;
-        top: 150px;
-        left: 30px;
         font-size: 16px;
         line-height: 13.92px;
       }
 
       &__img {
-        bottom: 18px;
-        left: 7px;
-        width: 78px;
-        height: 54px;
         transform: rotate(-66.89deg);
       }
-    }
-
-    &__title {
-      @include title-mobile;
-    }
-  }
-
-  
-
-  .viewRightColumn {
-    @include columnView-mobile;
-    margin-top: 18px;
-
-    .rightColumnItalic {
-      width: 207px;
-      top: 150px; // 150
-      left: 35%; // 193
-      font-size: 16px;
-      line-height: 13.92px;
-      transform: rotate(-13deg);
-      text-align: center;
-    }
-    &__title {
-      @include title-mobile;
     }
   }
 
@@ -408,10 +366,117 @@
     button {
       width: 100%;
       max-width: 100%;
+      padding: 0;
+    }
+  }
+}
+
+@media screen and (min-width: 480px) and (max-width: 639px) {
+  .primaryViewInner {
+    &__human {
+      width: 260.53px;
+      height: 341.87px;
+      top: 33px;
+      left: 45%;
+    }
+  }
+
+  .viewLeftColumn {
+    border-radius: 30px;
+    height: 316px;
+
+    .leftColumnIllustration {
+      &__text {
+        width: 213px;
+        top: 150px;
+        left: 30px;
+      }
+
+      &__img {
+        bottom: 18px;
+        left: 7px;
+        width: 78px;
+        height: 54px;
+      }
+    }
+  }
+
+  .viewRightColumn {
+    margin-top: 18px;
+    border-radius: 30px;
+    height: 316px;
+
+    .rightColumnItalic {
+      width: 207px;
+      top: 150px; // 150
+      left: 35%; // 193
+      font-size: 16px;
+      line-height: 13.92px;
+      transform: rotate(-13deg);
+      text-align: center;
+    }
+  }  
+
+  .mobileButton {
+    button {
       height: 57px;
       font-size: 24px;
       line-height: 87.02%;
-      padding: 0;
+    }
+  }
+}
+
+@media screen and (max-width: 479px) {
+  .primaryViewInner {
+    &__human {
+      width: 193.11px;
+      height: 253.41px;
+      top: 100px;
+      left: 48%;
+    }
+  }
+
+  .viewLeftColumn, .viewRightColumn {
+    border-radius: 24px;
+    height: 300px;
+  }
+
+  .viewLeftColumn {
+    .leftColumnIllustration {
+      &__text {
+        width: 195.24px;
+        top: 140px;
+        left: 23px;
+      }
+
+      &__img {
+        height: 43.93px;
+        width: 63.79px;
+        bottom: 10px;
+        left: 20px;
+      }
+    }
+  }
+
+  .viewRightColumn {
+    margin-top: 18px;
+
+    .rightColumnItalic {
+      width: 207px;
+      top: 150px; // 150
+      left: 35%; // 193
+      font-size: 16px;
+      line-height: 13.92px;
+      transform: rotate(-13deg);
+      text-align: center;
+    }
+  }
+
+  .mobileButton {
+    button {
+      height: 50px;
+      font-size: 20px;
+      line-height: 87.02%;
     }
   }
 }
