--- a/src/widgets/Home/AboutUs/components/additionalCard/Additional.module.scss
+++ b/src/widgets/Home/AboutUs/components/additionalCard/Additional.module.scss
@@ -74,7 +74,7 @@
   }
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (min-width: 480px) and (max-width: 639px) {
   .additionalCardWrapper {
     width: 100%;
     height: 100%;
