--- a/src/widgets/Home/AboutUs/components/problemCard/ProblemCard.module.scss
+++ b/src/widgets/Home/AboutUs/components/problemCard/ProblemCard.module.scss
@@ -116,7 +116,7 @@
   }
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (min-width: 480px) and (max-width: 639px) {
   .problemCardWrapper {
     width: 100%;
     height: 100%;
@@ -150,5 +150,4 @@
       }
     }
   }
-
 }
