--- a/src/widgets/Home/AboutUs/components/solutionCard/SolutionCard.module.scss
+++ b/src/widgets/Home/AboutUs/components/solutionCard/SolutionCard.module.scss
@@ -114,8 +114,7 @@
   }
 }
 
-
-@media screen and (max-width: 480px) {
+@media screen and (min-width: 480px) and (max-width: 639px) {
     .solutionCardPosition {
       &__pointer {
         display: none; 
